# ganshot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release-plz.toml
.cargo/: audit.toml  deny.toml
.github/: copilot-instructions.md  depnedabot.yml
.github/workflows/: audit.yml  quality.yml  release.yml
examples/: gan_train.rs  generate_stars.rs  inference.rs  mnist_inference.rs  mnist_train.rs  plot_outlines.rs  read_human_pose.rs  train_gaussian.rs  train_stars.rs
src/: backend.rs  data.rs  gan.rs  inference.rs  lib.rs  main.rs  model.rs  models.rs  training.rs
src/data/: commons.rs  human_pose.rs  points.rs  stars.rs
src/gan/: data.rs  model.rs  record.rs  training.rs
src/gan/data/: triplet.rs
src/mnist/: inference.rs  model.rs  training.rs
src/models/: discriminator.rs  generator.rs
src/training/: recorder.rs  runner.rs
tests/: data.rs  gan.rs  models.rs
tests/data/: stars.rs
tests/models/: discriminator.rs  generator.rs
