[package]
name = "ganshot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
burn = { version = "0.21.0", default-features = false, features = ["train"] }
getrandom = "0.4.3"
plotly = "0.14.1"
rand = "0.10.1"
rand_distr = "0.6.0"

# Apple Silicon: GPU via the Wgpu/Metal backend (see src/backend.rs).
[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.21.0", features = ["metal", "wgpu"] }

# Everywhere else: CPU-only, pure-Rust Flex backend (see src/backend.rs).
[target.'cfg(not(target_os = "macos"))'.dependencies]
burn = { version = "0.21.0", features = ["flex"] }

[dev-dependencies]
