[package]
name = "ganshot"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.103"
burn = { version = "0.21.0", default-features = false, features = ["train"] }
plotly = "0.14.1"
rand = "0.10.2"
rand_distr = "0.6.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"

# Apple Silicon: GPU via the Wgpu/Metal backend (see src/backend.rs).
[target.'cfg(target_os = "macos")'.dependencies]
burn = { version = "0.21.0", features = ["metal", "wgpu"] }

# Everywhere else: CPU-only, pure-Rust Flex backend (see src/backend.rs).
[target.'cfg(not(target_os = "macos"))'.dependencies]
burn = { version = "0.21.0", features = ["flex"] }

[dev-dependencies]
